	PR c++/8372 	* pt.c (tsubst_copy): Handle destructor names more correctly.

PR c++/8372
	* g++.dg/template/dtor1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@60015 138bc75d-0d04-0410-961f-82ee72b054a4