gcc/testsuite/g++.dg/template/dtor1.C
@@ -1,0 +1,8 @@
+struct A {};
+
+template <typename T> struct B
+{
+  B() { A().A::~A(); }
+};
+
+B<void> b;
